# word2vec

./: .gitignore  CMakeLists.txt  README.txt  compute-accuracy.c  demo-word.sh  distance.c  word-analogy.c  word2phrase.c  word2vec.c
pthreads-win32/lib/x64/: pthreadVC3.lib  pthreadVCE3.lib  pthreadVSE3.lib
